# deck-orchestrator

./: .gitignore  DESIGN.md  Makefile  README.md
analysis/: Makefile  README.md  REPORT.md  package-lock.json  package.json  pyproject.toml
analysis/console/: analyze.py  playwright.config.ts  tsconfig.json
analysis/console/init-scripts/: instrument-cache.ts  instrument-fetch.ts  instrument-visibility.ts
analysis/console/specs/: _fixture.ts  event-burst.spec.ts  hundred-deck-fleet.spec.ts  long-lived.spec.ts  multi-tab.spec.ts  reconnect.spec.ts  steady-state.spec.ts
analysis/inefficiencies/: _types.py  inefficiencies.md  scan.py
analysis/inefficiencies/checks/console/: backgrounded_tab.py  bootstrap_on_open.py  events_cache_unbounded.py  multi_tab_cost.py  per_resource_refetch.py  reconnect_recovery.py  render_storm.py  run_detail_redundancy.py
analysis/inefficiencies/checks/server/: bootstrap_n_plus_1.py  error_envelope_bloat.py  header_body_ratio.py  heartbeat_noop_rate.py  missing_compression.py  rebootstrap_thrash.py  reconciler_probe_rate.py  request_id_propagation.py  run_detail_double_poll.py  state_overfetch.py  wasted_polls.py  write_contention.py
analysis/loadgen/: __init__.py  __main__.py  executor_task.py  models.py  state_server.py
analysis/scale/: plot.py  sweep.py  watch.py
analysis/static/: contract.md  extract.py
analysis/wire/: analyze.py  capture.sh  orchestrator.analysis.yaml  scenario.py  supervisor.analysis.yaml
api/: oapi-codegen.yaml  openapi.yaml  supervisor.openapi.yaml
backend/: .golangci.yml  go.mod  go.sum  sqlc.yaml
(+315 files in other folders)
