[project]
name = "deck-fleet-analysis"
version = "0.1.0"
description = "Static + dynamic analysis toolkit for the deck-fleet orchestrator"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "psutil>=5.9",
    "httpx>=0.27",
    "aiohttp>=3.10",
    "uvloop>=0.19; sys_platform != 'win32'",
    "pyarrow>=15.0",
    "tabulate>=0.9",
]

# uv treats this as a non-installable project — we run scripts via `uv run`
# from the repo root, so `python -m analysis.X` finds the package via cwd
# on sys.path. No setuptools build needed.
[tool.uv]
package = false
